# qnvidiasmi

./: README.md  pyproject.toml
src/qnvidiasmi/: _core.py
